# processIQ

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: backend-ci.yml  ci-skip.yml  frontend-ci.yml
api/: main.py  schemas.py
data/: example_driving_service_full.md  example_marketing_agency.md
docs/: PROJECT_BRIEF.md  agent_flow.mmd  ai-analysis-design.md  architecture.md  architecture_diagram.mmd  backend.md  deployment.md  frontend.md
docs/decisions/: 0004-fastapi-nextjs-over-streamlit.md  0005-investigation-loop-design.md  README.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/chat/: ChatInterface.tsx  EmptyState.tsx
frontend/components/layout/: ContextStrip.tsx  Header.tsx  LeftRail.tsx  RevealTransition.tsx
frontend/components/process/: ProcessStepsTable.tsx
frontend/components/results/: ProcessIntelligencePanel.tsx
frontend/components/settings/: SettingsDrawer.tsx
frontend/components/visualization/: ProcessGraph.tsx
frontend/lib/: api.ts  mockData.ts  types.ts
src/processiq/: config.py  llm.py  logging_config.py  model_presets.py
src/processiq/agent/: context.py  graph.py  interface.py  nodes.py  state.py  tools.py
src/processiq/analysis/: confidence.py  metrics.py  visualization.py
src/processiq/export/: pdf_export.py  summary.py
src/processiq/ingestion/: csv_loader.py  docling_parser.py  excel_loader.py  normalizer.py
src/processiq/models/: __init__.py  constraints.py  insight.py  memory.py  process.py
src/processiq/persistence/: analysis_store.py  db.py  profile_store.py  user_store.py  vector_store.py
src/processiq/prompts/: __init__.py  _extraction_fields.j2  analyze.j2  clarification.j2  extract_converse.j2  extract_estimate.j2  extract_new.j2  extract_update.j2  extraction.j2  followup.j2  improvement_suggestions.j2  investigation_system.j2  memory_brief.j2  system.j2
src/processiq/ui/: handlers.py  styles.py
src/processiq/ui/components/: chat.py  data_review.py  process_input.py  process_visualization.py  results_display.py
tests/: conftest.py
tests/unit/: test_config.py
tests/unit/test_agent/: test_context.py  test_edges.py  test_graph.py  test_interface.py  test_nodes.py
tests/unit/test_analysis/: test_visualization.py
tests/unit/test_api/: test_endpoints.py
tests/unit/test_ingestion/: test_normalizer.py
tests/unit/test_models/: test_constraints.py  test_process.py
tests/unit/test_persistence/: test_analysis_store.py  test_profile_store.py
